v<0.0.0>, <08/01/2020> -- Initial release.
v<0.0.1>, <08/03/2020> -- Initial release & minor example fix.
v<0.0.2>, <08/04/2020> -- Set up autotests.
v<0.0.2>, <08/05/2020> -- Enable read the docs.
v<0.0.2>, <08/06/2020> -- Add models and remove task parameter from model invocation.
v<0.0.3>, <08/10/2020> -- Massive code refactoring.
v<0.0.3>, <08/11/2020> -- Add GPU support.
v<0.0.3>, <08/12/2020> -- Add support for image and clinical notes.
v<0.0.4>, <08/16/2020> -- Documentation update and binder setup.
v<0.0.5>, <08/20/2020> -- Add ECG models.
v<0.0.5>, <11/20/2020> -- Refactor most models.
v<0.0.6>, <01/04/2021> -- Model refactor and paper submission.
